--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-#     if: github.event_name == 'tags'
+    if: github.event == 'tags'
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
