--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: github.event == 'tags'
+    if: github.event_name == 'push'
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -27,7 +27,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 #     needs: test
-#     if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request'
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
