--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -1,9 +1,10 @@
 name: CI/CD Pipeline
 
 on:
-#   release: 
-#     types: [ published, edited]
-#     branches: [ main ]
+  release: 
+    types: [ published, edited]
+    branches:
+      - main
 #   pull_request:
 #     branches: [ main ]
   push:  
@@ -27,7 +28,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 #     needs: test
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'release'
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
