--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -16,7 +16,8 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: github.event_name == 'push'
+#     if: github.event_name == 'push'
+    if: startsWith(github.ref, 'refs/tags/v')
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
