--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -17,7 +17,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
 #     if: github.event_name == 'push'
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
