--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -17,7 +17,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
 #     if: github.event_name == 'push'
-    if: startsWith(github.ref, 'refs/tags/')
+#     if: startsWith(github.ref, 'refs/tags/')
+    if: ${{ github.ref == 'refs/tags/qa*' }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -29,8 +30,8 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 #     needs: test
-#     if: github.event_name == 'release'
-    if: startsWith(github.ref, 'refs/release/types')
+    if: github.event_name == 'release'
+#     if: startsWith(github.ref, 'refs/release/types')
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
