--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
 #     if: github.event_name == 'push'
 #     if: startsWith(github.ref, 'refs/tags/')
-    if: ${{ github.ref == 'refs/tags/qa*' }}
+    if: ${{ github.ref == 'refs/tags/' }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
