--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -17,8 +17,8 @@ jobs:
   test:
     runs-on: ubuntu-latest
 #     if: github.event_name == 'push'
-#     if: startsWith(github.ref, 'refs/tags/')
-    if: ${{ github.ref == 'refs/tags/' }}
+    if: startsWith(github.ref, 'refs/tags/')
+#     if: ${{ github.ref == 'refs/tags/' }}
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
