--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -17,7 +17,9 @@ jobs:
   test:
     runs-on: ubuntu-latest
 #     if: github.event_name == 'push'
-    if: startsWith(github.ref, 'refs/tags/')
+#     if: startsWith(github.ref, 'refs/tags/')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/qa')
+
 #     if: ${{ github.ref == 'refs/tags/' }}
     steps:
     - name: Checkout code
