--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -1,6 +1,9 @@
 name: CI/CD Pipeline
 
 on:
+  pull_request: 
+    branches: 
+      - main
   release: 
     types: [ published, edited]
     branches:
@@ -14,6 +17,18 @@ on:
       - main
 
 jobs:
+  dev_pull:
+    runs-on: ubuntu-latest
+#     needs: test
+    if: github.event_name == 'pull_request'
+#     if: startsWith(github.ref, 'refs/release/types')
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Deploy application
+      run: |
+        # Run your deployment commands here
+        echo "pull_request deployments"
   test:
     runs-on: ubuntu-latest
 #     if: github.event_name == 'push'
