--- a/.github/workflows/samplee.yml
+++ b/.github/workflows/samplee.yml
@@ -32,5 +32,5 @@ jobs:
         port: 22
         script: |
           whoami
-          git pull https://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@github.com/ShravanKumarKSK/IH-main
+          git pull https://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@github.com/ShravanKumarKSK/IH-main.git
         
